Arbete onsdag kväll

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <a href="html/sida-2.html">Sida 2</a>
                     </li>
                     <li>
-                        <a href="#">Sida 3</a>
+                        <a href="html/sida-3.html">Sida 3</a>
                     </li>
                 </ul>
             </nav>
