--- a/html/sida-2.html
+++ b/html/sida-2.html
@@ -12,7 +12,7 @@
     <body id="sida2">
         <div class="wrapper">
             <header>
-                <h1>Min Webbplats - Startsida</h1>
+                <h1>Min Webbplats - Sida 2</h1>
             </header>
         
             <nav>
