--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     
             <main>
                 <figure>
-                    <img src="src/våt uggl.jpg" alt="Uggla">
+                    <img src="src/våtUggl.jpg" alt="Uggla">
                 </figure>
     
                 <p>
