--- a/html/sida-3.html
+++ b/html/sida-3.html
@@ -6,13 +6,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="../css/style.css">
         <script src="../script.js"></script>
-        <title>Sida 2</title>
+        <title>Sida 3</title>
     </head>
     
-    <body id="sida2">
+    <body id="sida3">
         <div class="wrapper">
             <header>
-                <h1>Min Webbplats - Startsida</h1>
+                <h1>Min Webbplats - Sida 3</h1>
             </header>
         
             <nav>
@@ -30,9 +30,12 @@
             </nav>
 
             <main>
-                <section id="artiklar">
-                </section>
+                <p>1. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt voluptatum fugit obcaecati odio doloribus necessitatibus asperiores eius ratione maiores, consequatur corporis. Ullam impedit illo consequatur blanditiis? Autem vero nulla odio.</p>
             </main>
+
+            <aside>
+                <p>2. Lorem ipsum dolor, sit amet condus possimus enim quis inventore.</p>
+            </aside>
 
             <footer>
                 <p>
